[tool.poetry]
name = "repl_python3_introductiontopythonTEAMLABMOOC"
version = "0.1.0"
description = ""
authors = ["caru1613 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-oauthlib = "^1.3.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
